# tool-semantics

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/actions/compare/: action.yml
.github/workflows/: ci.yml  publish.yml
docs/: adapters.md  adr-live-mcp-capture.md  architecture.md  change-codes.md  config.md  github-action.md  publishing.md
examples/: github_server_v1.json  github_server_v2.json  tool-semantics.toml  weather_with_output.json
src/tool_semantics/: __init__.py  adapters.py  benchmarks.py  cli.py  config.py  diff.py  mcp_capture.py  models.py  policy.py  probes.py  redact.py  report.py  scanner.py
tests/: test_cli.py  test_config.py  test_diff.py  test_mcp_capture.py  test_phase3.py  test_policy_adapters.py  test_probes.py  test_scanner.py
tests/fixtures/: fake_mcp_server.py
