[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tool-semantics"
version = "0.1.0"
description = "Behavioral compatibility testing for MCP tools and AI-agent interfaces"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  { name = "Tool-Semantics contributors" }
]
keywords = [
  "mcp",
  "ai-agents",
  "tool-calling",
  "compatibility",
  "semantics",
  "testing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
]

[project.urls]
Homepage = "https://github.com/askmy-stack/Tool-Semantics"
Repository = "https://github.com/askmy-stack/Tool-Semantics"
Issues = "https://github.com/askmy-stack/Tool-Semantics/issues"
Changelog = "https://github.com/askmy-stack/Tool-Semantics/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
  "pre-commit>=3.8,<5",
]

[project.scripts]
tool-semantics = "tool_semantics.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tool_semantics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tool_semantics"]
mypy_path = "src"
